--- a/01_gds_intro.html
+++ b/01_gds_intro.html
@@ -386,7 +386,7 @@ if (!file.exists(vcffile)) download.file(file.path(repo_path, vcffile), vcffile)
 gdsfile &lt;- &quot;data/1KG_phase3_subset_chr1.gds&quot;
 # convert the VCF to GDS
 seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZMA_RA&quot;)</code></pre>
-<pre><code>## Fri Jul  8 15:37:47 2022
+<pre><code>## Thu Jul 14 19:01:08 2022
 ## Variant Call Format (VCF) Import:
 ##     file(s):
 ##         1KG_phase3_subset_chr1.vcf.gz (120.7K)
@@ -413,7 +413,7 @@ seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZM
 ##     annotation/qual  [md5: d6b8ed9bd5cac7dd7898bb679675fc7c]
 ##     annotation/filter  [md5: 8294edaf60fffc1e9aa693b4bc423dd1]
 ## Done.
-## Fri Jul  8 15:37:47 2022
+## Thu Jul 14 19:01:09 2022
 ## Optimize the access efficiency ...
 ## Clean up the fragments of GDS file:
 ##     open the file &#39;data/1KG_phase3_subset_chr1.gds&#39; (71.3K)
@@ -421,7 +421,7 @@ seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZM
 ##     save to &#39;data/1KG_phase3_subset_chr1.gds.tmp&#39;
 ##     rename &#39;data/1KG_phase3_subset_chr1.gds.tmp&#39; (70.5K, reduced: 744B)
 ##     # of fragments: 61
-## Fri Jul  8 15:37:47 2022</code></pre>
+## Thu Jul 14 19:01:09 2022</code></pre>
 </div>
 <div id="exploring-a-gds-file" class="section level2">
 <h2>Exploring a GDS File</h2>
@@ -912,8 +912,6 @@ see the results once it has completed.</p>
 </div>
 <div id="solution-1.2-application" class="section level3">
 <h3>Solution 1.2 (Application)</h3>
-<p>Use the <code>VCF to GDS Converter</code> app to convert the example
-1000 Genomes files into GDS files.</p>
 <p>The steps to perform this analysis are as follows:</p>
 <ul>
 <li>Copy the app to your project if it is not already there:
@@ -937,12 +935,9 @@ see the results once it has completed.</p>
 <li>Click: Run</li>
 </ul></li>
 </ul>
-<p>The analysis will take a few minutes to run. You can find your
-analysis in the Tasks menu of your Project to check on its progress and
-see the results once it has completed. You can find the expected output
-of this analysis by looking at the existing task
-<code>1. Convert 1KG VCF to GDS</code> in the Tasks menu of your
-Project.</p>
+<p>You can find the expected output of this analysis by looking at the
+existing task <code>1. Convert 1KG VCF to GDS</code> in the Tasks menu
+of your Project.</p>
 </div>
 </div>
 </div>
