--- a/02_single_variant_tests.html
+++ b/02_single_variant_tests.html
@@ -366,7 +366,7 @@ pre code {
 
 
 <div id="single-variant-association-tests" class="section level1">
-<h1>Single Variant Association Tests</h1>
+<h1>2. Single Variant Association Tests</h1>
 <p>Single variant association tests are used to identify genetic
 variants associated with a phenotype of interest. Performing
 single-variant tests genome-wide is commonly referred to as a Genome
@@ -389,7 +389,7 @@ covariate data), which is currently stored in a tab separated .tsv file.
 We then create metadata to describe the columns in of the phenotype
 data. Finally, we create an <code>AnnotatedDataFrame</code> by pairing
 the phenotype data with the metadata.</p>
-<pre class="r"><code>repo_path &lt;- &quot;https://github.com/UW-GAC/SISG_2022/raw/master&quot;
+<pre class="r"><code>repo_path &lt;- &quot;https://github.com/UW-GAC/SISG_2022/raw/main&quot;
 if (!dir.exists(&quot;data&quot;)) dir.create(&quot;data&quot;)
 
 # load phenotype data
