--- a/01_gds_intro.html
+++ b/01_gds_intro.html
@@ -381,12 +381,17 @@ convert to VCF.)</p>
 <pre class="r"><code>library(SeqArray)
 repo_path &lt;- &quot;https://github.com/UW-GAC/SISG_2022/raw/main&quot;
 if (!dir.exists(&quot;data&quot;)) dir.create(&quot;data&quot;)
+
+# file path to the VCF file to *read* data from 
 vcffile &lt;- &quot;data/1KG_phase3_subset_chr1.vcf.gz&quot;
 if (!file.exists(vcffile)) download.file(file.path(repo_path, vcffile), vcffile)
+
+# file path to *write* the output GDS file to 
 gdsfile &lt;- &quot;data/1KG_phase3_subset_chr1.gds&quot;
+
 # convert the VCF to GDS
 seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZMA_RA&quot;)</code></pre>
-<pre><code>## Sat Jul 23 19:58:17 2022
+<pre><code>## Wed Jul 27 14:04:09 2022
 ## Variant Call Format (VCF) Import:
 ##     file(s):
 ##         1KG_phase3_subset_chr1.vcf.gz (120.7K)
@@ -413,7 +418,7 @@ seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZM
 ##     annotation/qual  [md5: d6b8ed9bd5cac7dd7898bb679675fc7c]
 ##     annotation/filter  [md5: 8294edaf60fffc1e9aa693b4bc423dd1]
 ## Done.
-## Sat Jul 23 19:58:18 2022
+## Wed Jul 27 14:04:09 2022
 ## Optimize the access efficiency ...
 ## Clean up the fragments of GDS file:
 ##     open the file &#39;data/1KG_phase3_subset_chr1.gds&#39; (71.3K)
@@ -421,7 +426,7 @@ seqVCF2GDS(vcffile, gdsfile, fmt.import=&quot;GT&quot;, storage.option=&quot;LZM
 ##     save to &#39;data/1KG_phase3_subset_chr1.gds.tmp&#39;
 ##     rename &#39;data/1KG_phase3_subset_chr1.gds.tmp&#39; (70.5K, reduced: 744B)
 ##     # of fragments: 61
-## Sat Jul 23 19:58:18 2022</code></pre>
+## Wed Jul 27 14:04:09 2022</code></pre>
 </div>
 <div id="exploring-a-gds-file" class="section level2">
 <h2>Exploring a GDS File</h2>
